--- a/app/assets/stylesheets/_exhibit.scss
+++ b/app/assets/stylesheets/_exhibit.scss
@@ -239,27 +239,38 @@ body {
   background-color:#ea352d;
 }
 
-  .back{
-    display: block;
-    margin: 0 auto;
-    text-align:center;
-    width: 45%;
-    line-height: 48px;
-    height: 48px;
-    background: #aaa;
-    border: 1px solid #aaa;
-    color: #fff;
-  }
-  select{
-    width: 100%;
-    position: relative;
-    z-index: 2;
-    height: 48px;
-    padding: 0 16px;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-    background: 0;
-    font-size: 16px;
-    line-height: 1.5;
-    cursor: pointer;
-  }
+.back{
+  display: block;
+  margin: 0 auto;
+  text-align:center;
+  width: 45%;
+  line-height: 48px;
+  height: 48px;
+  background: #aaa;
+  border: 1px solid #aaa;
+  color: #fff;
+}
+select{
+  width: 100%;
+  position: relative;
+  z-index: 2;
+  height: 48px;
+  padding: 0 16px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  background: 0;
+  font-size: 16px;
+  line-height: 1.5;
+  cursor: pointer;
+}
+
+.error-message {
+  color: red;
+  padding: 10px 0 0 0;
+}
+#price.error-message {
+  color: red;
+  padding: 10px 0px 0 0px;
+  position: relative;
+  right: 200px;
+}
