--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -10,76 +10,76 @@
       %i.fa.fa-search
     .main-header__nav-box
       %nav.left-box
-        %ul.login-nav
-          %li
+        %ul.search-box
+          %li.list-nav
             %a.category{href: ""}
               カテゴリから探す
-              %ul.category
-                %li
-                  %a{href: ""}
-                    レディース
-                %li
-                  %a{href: ""}
-                    メンズ
-                %li
-                  %a{href: ""}
-                    ベビー・キッズ
-                %li
-                  %a{href: ""}
-                    インテリア・住まい・小物
-                %li
-                  %a{href: ""}
-                    本・音楽・ゲーム
-                %li
-                  %a{href: ""}
-                    おもちゃ・ホビー・グッズ
-                %li
-                  %a{href: ""}
-                    コスメ・香水・美容
-                %li
-                  %a{href: ""}
-                    家電・スマホ・カメラ
-                %li
-                  %a{href: ""}
-                    スポーツ・レジャー
-                %li
-                  %a{href: ""}
-                    ハンドメイド
-                %li
-                  %a{href: ""}
-                    チケット
-                %li
-                  %a{href: ""}
-                    自転車・オートバイ
-                %li
-                  %a{href: ""}
-                    その他
-                %li
-                  %a{href: ""}
-                    カテゴリー一覧
+            %ul.category
+              %li.list
+                %a{href: ""}
+                  レディース
+              %li.list
+                %a{href: ""}
+                  メンズ
+              %li.list
+                %a{href: ""}
+                  ベビー・キッズ
+              %li.list
+                %a{href: ""}
+                  インテリア・住まい・小物
+              %li.list
+                %a{href: ""}
+                  本・音楽・ゲーム
+              %li.list
+                %a{href: ""}
+                  おもちゃ・ホビー・グッズ
+              %li.list
+                %a{href: ""}
+                  コスメ・香水・美容
+              %li.list
+                %a{href: ""}
+                  家電・スマホ・カメラ
+              %li.list
+                %a{href: ""}
+                  スポーツ・レジャー
+              %li.list
+                %a{href: ""}
+                  ハンドメイド
+              %li.list
+                %a{href: ""}
+                  チケット
+              %li.list
+                %a{href: ""}
+                  自転車・オートバイ
+              %li.list
+                %a{href: ""}
+                  その他
+              %li.list
+                %a{href: ""}
+                  カテゴリー一覧
 
-          %li
+          %li.list-nav
             %a.brand{href: ""}
               ブランドから探す
-              %ul.brand
-                %li
-                  %a{href: ""}
-                    シャネル
-                %li
-                  %a{href: ""}
-                    ナイキ
-                %li
-                  %a{href: ""}
-                    ルイヴィトン
-                %li
-                  %a{href: ""}
-                    シュプリーム
-                %li
-                  %a{href: ""}
-                    アディダス
-                %li
-                  %a{href: ""}
-                    ブランド一覧
+            %ul.brand
+              %li.list
+                %a{href: ""}
+                  シャネル
+              %li.list
+                %a{href: ""}
+                  ナイキ
+              %li.list
+                %a{href: ""}
+                  ルイヴィトン
+              %li.list
+                %a{href: ""}
+                  シュプリーム
+              %li.list
+                %a{href: ""}
+                  アディダス
+              %li.list
+                %a{href: ""}
+                  ブランド一覧
 
       %nav.right-box
         %ul.header-nav
