Change to link_to

--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -12,80 +12,56 @@
       %nav.left-box
         %ul.search-box
           %li.list-nav
-            %a.category{href: ""}
-              カテゴリから探す
+            = link_to "カテゴリから探す", "", class: "category"
             %ul.category
               %li.list
-                %a{href: ""}
-                  レディース
+                = link_to "レディース"
               %li.list
-                %a{href: ""}
-                  メンズ
+                = link_to "メンズ"
               %li.list
-                %a{href: ""}
-                  ベビー・キッズ
+                = link_to "ベビー・キッズ"
               %li.list
-                %a{href: ""}
-                  インテリア・住まい・小物
+                = link_to "インテリア・住まい・小物"
               %li.list
-                %a{href: ""}
-                  本・音楽・ゲーム
+                = link_to "本・音楽・ゲーム"
               %li.list
-                %a{href: ""}
-                  おもちゃ・ホビー・グッズ
+                = link_to "おもちゃ・ホビー・グッズ"
               %li.list
-                %a{href: ""}
-                  コスメ・香水・美容
+                = link_to "コスメ・香水・美容"
               %li.list
-                %a{href: ""}
-                  家電・スマホ・カメラ
+                = link_to "家電・スマホ・カメラ"
               %li.list
-                %a{href: ""}
-                  スポーツ・レジャー
+                = link_to "スポーツ・レジャー"
               %li.list
-                %a{href: ""}
-                  ハンドメイド
+                = link_to "ハンドメイド"
               %li.list
-                %a{href: ""}
-                  チケット
+                = link_to "チケット"
               %li.list
-                %a{href: ""}
-                  自転車・オートバイ
+                = link_to "自転車・オートバイ"
               %li.list
-                %a{href: ""}
-                  その他
+                = link_to "その他"
               %li.list
-                %a{href: ""}
-                  カテゴリー一覧
+                = link_to "カテゴリー一覧"
 
           %li.list-nav
-            %a.brand{href: ""}
-              ブランドから探す
+            = link_to "ブランドから探す", "", class: "brand"
             %ul.brand
               %li.list
-                %a{href: ""}
-                  シャネル
+                = link_to "シャネル"
               %li.list
-                %a{href: ""}
-                  ナイキ
+                = link_to "ナイキ"
               %li.list
-                %a{href: ""}
-                  ルイヴィトン
+                = link_to "ルイヴィトン"
               %li.list
-                %a{href: ""}
-                  シュプリーム
+                = link_to "シュプリーム"
               %li.list
-                %a{href: ""}
-                  アディダス
+                = link_to "アディダス"
               %li.list
-                %a{href: ""}
-                  ブランド一覧
+                = link_to "ブランド一覧"
 
       %nav.right-box
         %ul.header-nav
           %li
-            %a.main-header__btn{href: ""}
-              ログイン
+            = link_to "ログイン", "", class: "main-header__btn"
           %li
-            %a.main-header__signup{href: ""}
-              新規会員登録
+            = link_to "新規会員登録", "", class: "main-header__signup"
