--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -1,7 +1,7 @@
 .main-header {
   height: 140px;
   width: 100%;
-  background-color: #fff;
+  background-color: $white;
   position: relative;
   &__inner {
     padding: 8px 0 0;
@@ -28,7 +28,6 @@ form.search-box {
   position: relative;
   float: right;
   input.search-form {
-    background-color: #fafafa;
     border: 1px solid #ccc;
     border-radius: 2px;
     height: 38px;
@@ -65,12 +64,12 @@ a {
       position: relative;
       display: inline-block;
       a.category {
-        color: #333;
+        color: $gray;
         line-height: 40px;
         font-size: 14px;
       }
       a.category:hover {
-        color: #0099e8;
+        color: $lightBlue;
       }
       ul.category {
         position: absolute;
@@ -78,12 +77,12 @@ a {
         z-index:100;
       }
       a.brand {
-        color: #333;
+        color: $gray;
         line-height: 40px;
         font-size: 14px;
       }
       a.brand:hover {
-        color: #0099e8;
+        color: $lightBlue;
       }
       ul.brand {
         position: absolute;
@@ -92,19 +91,19 @@ a {
       }
       li.list {
         padding-left: 16px;
-        background: #fff;
+        background: $white;
         width: 224px;
         a {
           font-weight: 400;
           font-size: 14px;
           line-height: 40px;
-          color: #333;
+          color: $gray;
         }
       }
       li.list:hover {
-        background: #ea352d;
+        background: $red;
         a {
-          color: #fff;
+          color: $white;
         }
       }
     }
@@ -124,19 +123,19 @@ a {
       line-height: 36px;
       font-size: 14px;
       a.main-header__btn {
-        background-color: #ea352d;
+        background-color: $red;
         text-align: center;
         padding: 7px;
         border-radius: 4px;
-        border: 1px solid #ea352d;
-        color: #fff;
+        border: 1px solid $red;
+        color: $white;
       }
       a.main-header__signup {
         text-align: center;
         padding: 7px;
         border-radius: 4px;
-        border: 1px solid #0099e8;
-        color: #0099e8;
+        border: 1px solid $lightBlue;
+        color: $lightBlue;
       }
     }
   }
