--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -12,7 +12,7 @@
       %nav.left-box
         %ul.search-box
           %li.list-nav
-            = link_to "カテゴリから探す", "", class: "category"
+            = link_to "カテゴリから探す", "#", class: "category"
             %ul.category
               %li.list
                 = link_to "レディース"
@@ -44,7 +44,7 @@
                 = link_to "カテゴリー一覧"
 
           %li.list-nav
-            = link_to "ブランドから探す", "", class: "brand"
+            = link_to "ブランドから探す", "#", class: "brand"
             %ul.brand
               %li.list
                 = link_to "シャネル"
@@ -62,6 +62,6 @@
       %nav.right-box
         %ul.header-nav
           %li
-            = link_to "ログイン", "", class: "main-header__btn"
+            = link_to "ログイン", "#", class: "main-header__btn"
           %li
-            = link_to "新規会員登録", "", class: "main-header__signup"
+            = link_to "新規会員登録", "#", class: "main-header__signup"
