--- a/app/assets/stylesheets/_exhibit.scss
+++ b/app/assets/stylesheets/_exhibit.scss
@@ -32,6 +32,29 @@ body {
     }
   }
 }
+.main__section__inner__form__group__subCategory__hidden {
+  display: none;
+  float:left;
+  font-weight: bold;
+  color: #333;
+  font-size: 14px;
+}
+.main__section__inner__form__group__subCategory__attention__hidden {
+  display: none;
+  float: right;
+  padding: 2px 4px;
+  margin: 0 0 0 8px;
+  background-color: #ea352d;
+  color: #fff;
+  border-radius: 2px;
+  font-size: 12px;
+}
+.selectmethod-1 {
+  display: none;
+}
+.selectmethod-2 {
+  display: none;
+}
 .main {
   display: block;
   &__section {
