--- a/app/views/shared/_sideBar.html.haml
+++ b/app/views/shared/_sideBar.html.haml
@@ -69,7 +69,7 @@
         メール/パスワード
         = fa_icon("chevron-right",class: "chevron-right sideBar-icon")
     %li.myPage__sideBar__settingList.myPage__sideBar__myList--events
-      = link_to "/users/#{@user.id}/identification/edit" do
+      = link_to edit_user_identification_path(@user.id) do
         本人情報
         = fa_icon("chevron-right",class: "chevron-right sideBar-icon")
     %li.myPage__sideBar__settingList.myPage__sideBar__myList--events
@@ -77,6 +77,6 @@
         電話番号の確認
         = fa_icon("chevron-right",class: "chevron-right sideBar-icon")
     %li.myPage__sideBar__settingList.myPage__sideBar__myList--events
-      = link_to "/users/#{@user.id}/logout" do
+      = link_to user_logout_path(@user.id) do
         ログアウト
         = fa_icon("chevron-right",class: "chevron-right sideBar-icon")
