--- a/app/assets/stylesheets/_users.scss
+++ b/app/assets/stylesheets/_users.scss
@@ -2,7 +2,6 @@
   margin:0 auto 0 ;
   width: 1020px;
   padding-bottom:40px;
-  height: 1500px;
   padding-top: 40px;
 
 //sideBar
@@ -22,12 +21,19 @@
     &__myList{
       border:solid 1px #EEE;
       line-height: 1.5;
-      padding: 15px;
       font-size:12px;
       color: #333;
       background-color: #fff;
       & + &{
         border-top:none;
+      }
+      a {
+        color: #333;
+        display: block;
+        padding: 15px;
+        &:visited {
+          color: #333;
+        }
       }
     }
     &__sales{
@@ -44,13 +50,20 @@
     &__salesList{
       border:solid 1px #EEE;
       line-height: 1.5;
-      padding: 15px;
       font-size:12px;
       color: #333;
       background-color: #fff;
 
       & + &{
         border-top:none;
+      }
+      a {
+        color: #333;
+        display: block;
+        padding: 15px;
+        &:visited {
+          color: #333;
+        }
       }
     }
     &__setting{
@@ -93,7 +106,13 @@
     height: 200px;
     background-color: gray;
     text-align: center;
-
+    a {
+      color: #333;
+      display: block;
+      &:hover {
+        opacity: 0.9;
+      }
+    }
     &__userImage{
       width: 60px;
       height: 60px;
