--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -7,6 +7,7 @@
     margin: 0 auto;
     height: 260px;
     width: 750px;
+    position: relative;
   }
 }
 
@@ -47,8 +48,6 @@
   }
   img.banner__image {
     position: absolute;
-    top: 0;
-    right: 345px;
     bottom: 0;
     width: 300px;
     height: 100%;
