トップページ、フッター、プロフィールの背景色を変更しました（いつでも変更できる状態にしました） & トップページの画像（スマートフォン）の位置を修正しました

--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -2,7 +2,8 @@
   height: 260px;
   width: 100%;
   position: relative;
-  background-color: #A0522D;
+  @include background_footer;
+
   &__box {
     margin: 0 auto;
     height: 260px;
