--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -16,7 +16,7 @@
         %img.banner__image{src: "//www-mercari-jp.akamaized.net/assets/img/common/jp/download_content_pc.png?1966943736"}
 
 .footer
-  .footer__box
+  .footer__box.clearfix
     %ul
       %li.footer-cell
         %h3
