add__exhibitor.html.haml
商品出品ページのフォームを部分テンプレートで分けて商品編集画面で使えるように変更

--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -4,18 +4,18 @@
   .item-container__main.clearfix
     .item-container__main-photo
       .item-container__main-photo-main
-        = image_tag("https://mcdn.mercariapp.com/item/detail/orig/photos/m70692846747_1.jpg?1548561871")
+        = image_tag(@product.image)
       .item-container__main-photo-bottom
         .item-container__main-photo-bottom-ele
-          = image_tag("https://mcdn.mercariapp.com/item/detail/orig/photos/m70692846747_1.jpg?1548561871")
+          = image_tag(@product.image)
         .item-container__main-photo-bottom-ele
-          = image_tag("https://static-mercari-jp-imgtr2.akamaized.net/item/detail/orig/photos/m70692846747_2.jpg?1548561871")
+          = image_tag(@product.image)
         .item-container__main-photo-bottom-ele
-          = image_tag("https://static-mercari-jp-imgtr2.akamaized.net/item/detail/orig/photos/m70692846747_3.jpg?1548561871")
+          = image_tag(@product.image)
         .item-container__main-photo-bottom-ele
-          = image_tag("https://static-mercari-jp-imgtr2.akamaized.net/item/detail/orig/photos/m70692846747_4.jpg?1548561871")
+          = image_tag(@product.image)
         .item-container__main-photo-bottom-ele
-          = image_tag("https://static-mercari-jp-imgtr2.akamaized.net/item/detail/orig/photos/m70692846747_5.jpg?1548561871")
+          = image_tag(@product.image)
     %table.item-container__main-table
       %tbody
         %tr
