プロフィール画面をつくりました（ビュー作成、プロフィール編集内容の反映、出品商品の表示）

--- a/app/views/users/_main.html.haml
+++ b/app/views/users/_main.html.haml
@@ -1,11 +1,12 @@
 .myPage__content
   .myPage__content__top
     .myPage__content__top__header
-      .myPage__content__top__header__userImage
-      .myPage__content__top__header__userName
-        = @user.nickname
-      .myPage__content__top__header__userEvaluate 評価 0
-      .myPage__content__top__header__userExhibit 出品数 0
+      =link_to user_profile_path(@user) do
+        .myPage__content__top__header__userImage
+        .myPage__content__top__header__userName
+          = @user.nickname
+        .myPage__content__top__header__userEvaluate 評価 0
+        .myPage__content__top__header__userExhibit 出品数 0
     .myPage__content__top__container
       .myPage__content__top__container__tab
         .myPage__content__top__container__tab__notice.myPage__content__top__container__tab__notice--display.myPage__content--tabColor
