商品カード（_product.html.haml）のスタイルを調整しました

--- a/app/assets/stylesheets/_product_details.scss
+++ b/app/assets/stylesheets/_product_details.scss
@@ -436,6 +436,7 @@ body {
           .item-exhibitor__item-box-content--box-body {
             padding: 16px;
             height: 110px;
+            margin: 0;
             h3 {
               overflow: hidden;
               position: relative;
