--- a/app/assets/stylesheets/_product_details.scss
+++ b/app/assets/stylesheets/_product_details.scss
@@ -252,6 +252,7 @@ body {
   &__description {
     padding: 32px 0 0;
     p {
+      word-break: break-all;
       white-space: pre-wrap;
       font-size: 18px;
       color: #333;
