--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -62,6 +62,12 @@
       %nav.right-box
         %ul.header-nav
           %li
-            = link_to "ログイン", user_session_path, class: "main-header__btn"
+            = link_to "マイページ", user_path(current_user.id), class: "main-header__nav" if user_signed_in?
           %li
-            = link_to "新規会員登録", new_user_registration_path, class: "main-header__signup"
+            = link_to "お知らせ", "#", class: "main-header__nav" if user_signed_in?
+          %li
+            = link_to "やることリスト", "#", class: "main-header__nav" if user_signed_in?
+          %li
+            = link_to "ログイン", user_session_path, class: "main-header__btn" unless user_signed_in?
+          %li
+            = link_to "新規会員登録", new_user_registration_path, class: "main-header__signup" unless user_signed_in?
